fixed format/layout issues I noticed when opening up on a larger monitor.  This should now work on all monitors and space evenly.

--- a/styles.css
+++ b/styles.css
@@ -160,6 +160,11 @@ ul {
 .section1 {
   background-color: rgb(86, 86, 86);
   border-bottom: 1px solid rgb(255, 132, 0);
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .section1 h2 {
@@ -173,6 +178,7 @@ h2 span {
 
 .subsection1 {
   display: flex;
+  align-items: center;
   justify-content: center;
   flex-wrap: wrap;
 }
@@ -183,6 +189,7 @@ h2 span {
 
 .sub img {
   width: 200px;
+  height: 200px;
   margin-bottom: 20px;
 }
 
@@ -227,6 +234,9 @@ h2 span {
   padding: 50px;
   background-color: #373535;
   border-bottom: 1px solid rgb(255, 132, 0);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .quote {
